// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Based - Full Integration Tests Enums Test Service should generate files 1`] = `
Array [
  "contact-types-2.enum.ts",
  "contact-types.enum.ts",
  "contact.form-group-fac.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ContactTypes } from './contact-types.enum';
import { ContactTypes2 } from './contact-types-2.enum';

export interface IContactForm {
    id: new FormControl<string | null>;
    accountId: new FormControl<string>;
    addressLine1: new FormControl<string>;
    contactType: new FormControl<ContactTypes>;
    contactType2: new FormControl<ContactTypes2>;
    contactType3: new FormControl<ContactTypes | null>;
}

export function ContactFormGroupFac(): FormGroup<IContactForm> {
  return new FormGroup<IContactForm>({
    id: new FormControl<string | null>(null),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    contactType: new FormControl<ContactTypes>(ContactTypes.Other, { validators: Validators.required, nonNullable: true } ),
    contactType2: new FormControl<ContactTypes2>(ContactTypes2.Air, { validators: Validators.required, nonNullable: true } ),
    contactType3: new FormControl<ContactTypes | null>(null),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ContactTypes } from './contact-types.enum';
import { ContactTypes2 } from './contact-types-2.enum';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContact {
/**
 * Unique Identifier
 */
  id?: string;
  accountId?: string;
  addressLine1?: string;
  contactType?: ContactTypes;
  contactType2?: ContactTypes2;
  contactType3?: ContactTypes;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactProperties {
/**
 * Unique Identifier
 */
  ID = 'id',
  ACCOUNT_ID = 'accountId',
  ADDRESS_LINE_1 = 'addressLine1',
  CONTACT_TYPE = 'contactType',
  CONTACT_TYPE_2 = 'contactType2',
  CONTACT_TYPE_3 = 'contactType3',
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

export enum ContactTypes {
  Other = 0,
  Air = 2,
  Truck = 3,
  Train = 4,
  CargoTransport = 5,
}

export const contactTypeValues = [
  { key: 0, name: 'Other', displayText: 'Other'},
  { key: 2, name: 'Air', displayText: 'Air'},
  { key: 3, name: 'Truck', displayText: 'Truck'},
  { key: 4, name: 'Train', displayText: 'Train'},
  { key: 5, name: 'CargoTransport', displayText: 'Cargo Transport'},
];
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-types-2.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

export enum ContactTypes2 {
  Air = 2,
  Truck = 3,
  Train = 4,
  CargoTransport = 5,
}

export const contactTypes2Values = [
  { key: 2, name: 'Air', displayText: 'Air'},
  { key: 3, name: 'Truck', displayText: 'Truck'},
  { key: 4, name: 'Train', displayText: 'Train'},
  { key: 5, name: 'CargoTransport', displayText: 'Cargo Transport'},
];
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  readonly contacts: string;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './contact-types-2.enum';
export * from './contact-types.enum';
export * from './contact.form-group-fac';
export * from './contact.model';
export * from './contact.properties';
"
`;
